--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "geolocation": "^0.2.0",
     "mongoose": "^6.3.8",
     "node-geocoder": "^4.0.0"
   },
